--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cocktails",
+  "name": "grupo9",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
+    "preview": "^0.1.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
@@ -26,7 +27,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",    
+    "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
   }
 }
